feat: add GlobalExceptionHandler

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,7 @@ spring:
         format_sql: true
 
 springdoc:
+  override-with-generic-response: false
   swagger-ui:
     tags-sorter: alpha
     operations-sorter: method
