fix: 영화 정보 수정 시 발생하는 JPA 세션 충돌 오류 해결 및 로깅 단계 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -53,3 +53,9 @@ springdoc:
   swagger-ui:
     tags-sorter: alpha
     operations-sorter: method
+
+logging:
+  level:
+    root: INFO
+    org.hibernate.SQL: WARN
+    org.hibernate.type.descriptor.sql: WARN
