--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,10 +14,10 @@ spring:
         oracle.net.tns_admin: ${TNS_ADMIN}
       connection-test-query: SELECT 1 FROM DUAL
   jpa:
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
-        format_sql: true
+#        format_sql: true
         dialect: org.hibernate.dialect.OracleDialect
   mail:
     protocol: smtp
