--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -59,3 +59,6 @@ logging:
     root: INFO
     org.hibernate.SQL: WARN
     org.hibernate.type.descriptor.sql: WARN
+
+toss:
+  api-secret-key: ${TOSS_API_SECRET_KEY}
